Añadido cambios para que se vea mejor, y encima la ruta relativa

--- a/NuevoProyectoGIT/pages/home.html
+++ b/NuevoProyectoGIT/pages/home.html
@@ -6,17 +6,22 @@
       content="width=    
     , initial-scale=1.0"
     />
- <link rel="stylesheet" href="/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins&family=Rampart+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/style.css" />
     <title>Nuevo Proyecto</title>
   </head>
   <body>
     <section class="main">
-        <h1>Nuevo proyecto con Dir</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus molestiae culpa autem distinctio. Temporibus expedita quo, earum magni voluptates veniam voluptatem nobis, quis neque rerum amet consectetur non, placeat tenetur?</p>
-        <button>
-            Genial😍
-        </button>
+      <h1>Nuevo proyecto con Dir</h1>
+      <p>
+        Este es un mensaje de prueba utilizando Git para versionamiento de archivos
+      </p>
+      <button>Genial😍</button>
     </section>
-
   </body>
 </html>
