--- a/NuevoProyectoGIT/pages/home.html
+++ b/NuevoProyectoGIT/pages/home.html
@@ -18,6 +18,7 @@
   <body>
     <section class="main">
       <h1>Nuevo proyecto con Dir</h1>
+      <h2>Pajillero cabrón</h2>
       <p>
         Este es un mensaje de prueba utilizando Git para versionamiento de archivos
       </p>
